--- a/arnost_pwa.html
+++ b/arnost_pwa.html
@@ -615,7 +615,7 @@
                 showAlert('Nejprve nastavte ID!', 'error');
                 return;
             }
-            window.open(`https://docs.google.com/spreadsheets/d/${GOOGLE_SHEET_ID}/edit`, '_blank');
+            window.open(`https://docs.google.com/spreadsheets/d/1sHd8j6lh0Uo1EoBXjFhVaamBELuDMEuyqwGFxEVfJ5g/edit`, '_blank');
         }
         
         function showAlert(message, type = 'success') {
@@ -656,7 +656,7 @@
                 ];
                 
                 try {
-                    await fetch(`https://script.google.com/macros/s/YOUR_SCRIPT_ID/exec`, {
+                    await fetch(`https://script.google.com/macros/s/AKfycbz9U5arp-hxmHqAHmmbakHzUPj5Rh5w3q4Mnkzd2mNSA0o2XEPEjj8E9-ZWUfzpqM9Pfw/exec`, {
                         method: 'POST',
                         mode: 'no-cors',
                         headers: { 'Content-Type': 'application/json' },
